Fixed test for linux-aarch64-debug where os* would dump /proc/cpuinfo with no decorators, making the test fail in a situation that is unrelated to our testing